# adcs-math

./: .gitmodules  CMakeLists.txt  README.md
include/: Body.h  Constants.h  InternationalTerrestrialReferenceFrame.h  Modes.h  SimplifiedGeneralPerturbations.h  TrueEquatorMeanEquinox.h  Utils.h  teme.h
include/utils/: AstroLib.h  EopSpw.h
src/: Body.cpp  InternationalTerrestrialReferenceFrame.cpp  SimplifiedGeneralPerturbations.cpp  TrueEquatorMeanEquinox.cpp  Utils.cpp  main.cpp  teme.cpp
